[project]
name = "hf-tool"
version = "0.1.0"
description = "A simple suite of CLI tools for Hugging Face"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface_hub>=0.20.0",
    "rich>=13.0.0",
    "requests>=2.31.0"
]

[project.scripts]
hf-tool = "main:main"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
